fixed the layout bug

--- a/styles/quizzList.css
+++ b/styles/quizzList.css
@@ -80,7 +80,8 @@ main{
     main{
         min-height: 100vh;
         margin-top: 70px;
-        width: 100vw;
+        width: 100%;
+        max-width: 100vw;
     }
 
     .all-quizzes-list{
