--- a/styles/style.css
+++ b/styles/style.css
@@ -80,7 +80,19 @@ button:hover{
 
 @media(max-width: 1100px){
 
-
+    .main-header{
+        width: 100vw;
+        height: 69px;
+        background-color: #ec362d;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        position: fixed;
+        top:0;
+        left:0;
+        z-index: 10;
+    }
 
     .single-quizz{
         position: relative;
